Add transactional annotations to services, enhance `PhoneNumberFileReader` with parallel processing and a collector method, extend `OfferingRepositoryPort` for bulk retrieval, fix YAML leak detection threshold, and refine `Offering` price fetch logic.